--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@ body{
         color: black;
         text-align: center;
         }
-        logoimg{font-size: 8ancorapx;
+        logoimg{font-size: 8px;
 
         }
