--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
         color: black;
         text-align: center;
         }
-        .logoimg{font-size: 80px;
+     .logoimg{
+        font-size: 80px;
 
         }
